injectable/tests/ui/unknown_impl_attribute.stderr
error: cannot find attribute `injectable` in this scope
 --> tests/ui/unknown_impl_attribute.rs
  |
  | #[injectable(bad = "value")]
  |   ^^^^^^^^^^
  |
  = note: `injectable` is in scope, but it is a crate, not an attribute
